# AI_course

./: README.md
controller_ex/: CMakeLists.txt  package.xml
controller_ex/config/: params.yaml
controller_ex/launch/: collision_detection.launch.py  controller.launch.py  controller_Jay.launch.py  controller_following.launch.py  controller_nav.launch.py  controller_no_llm.launch.py
controller_ex/scripts/: collision_detection.py  controller.py  controller_Jay.py  controller_following.py  controller_nav.py  controller_nav_demo.py  controller_no_llm.py  controller_running.py
genbot/amfitrack/config/: params.yaml
genbot/scout_ros2/scout_simulation/launch/: robot_experiment.launch.py
genbot/scout_ros2/scout_simulation/rviz/: scout_real.rviz
genbot/zed-ros2-wrapper/zed_wrapper/config/: common_stereo.yaml
gimbal/gimbal_bringup/: CMakeLists.txt  package.xml
gimbal/gimbal_bringup/config/: params.yaml
gimbal/gimbal_bringup/launch/: gimbal_tracking_jay.launch.py
gimbal/gimbal_bringup/scripts/: gimbal_bringup.py  gimbal_tracking.py  gimbal_tracking_jay.py
gimbal/gimbal_bringup_arduino/: CMakeLists.txt  package.xml
gimbal/gimbal_bringup_arduino/config/: params.yaml
gimbal/gimbal_bringup_arduino/launch/: gimbal_bringup.launch.py  gimbal_tracking.launch.py  gimbal_tracking_Jay.launch.py
gimbal/gimbal_bringup_arduino/scripts/: gimbal_bringup.py  gimbal_tracking.py  gimbal_tracking_Jay.py
gimbal/gimbal_msg/: CMakeLists.txt  package.xml
gimbal/gimbal_msg/msg/: MotorCmd.msg  MotorState.msg
pointcloud_to_laserscan/launch/: pointcloud_to_laserscan_launch.py
(+5 files in other folders)
