<?xml version="1.0"?>
<package format="3">
  <name>gimbal_msg</name>
  <version>0.0.0</version>
  <description>Message definitions for the gimbal system.</description>

  <maintainer email="vuthanh.cdt@gmail.com">Cong-Thanh Vu</maintainer>
  <license>BSD-3-Clause</license>

  <!-- Build tool -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Build-time dependencies -->
  <build_depend>rosidl_default_generators</build_depend>

  <!-- Runtime dependencies -->
  <exec_depend>rosidl_default_runtime</exec_depend>

  <!-- Message dependencies -->
  <depend>geometry_msgs</depend>

  <!-- Linting (optional) -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <!-- Identify as a ROSIDL interface package -->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

